--- a/css/contributors.css
+++ b/css/contributors.css
@@ -4,3 +4,14 @@ body {
   line-height: 1.6;
   background-color: #EEEEEE;
 }
+
+#navbar {
+  padding: 8px;
+  background-color: #FF0844;
+}
+
+#navbar a {
+  margin-left: 6px;
+  color: white;
+  font-size: 18px;
+}
